--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "npm": "^6.14.8",
     "tslib": "^2.0.0",
     "rxjs": "~6.5.5",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.10.2",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/entity": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
